Final edits on ttbar/bbar sections, some monojet typos
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@192 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -7,11 +7,13 @@
 
 \label{sec:ttdm}
 
-In some theoretically motivated scenario (e.g. for high $tan\beta$ in the pMSSM ), 
+
+In some theoretically motivated scenario (e.g. for high $tan\beta$ in 2HDM in the pMSSM), 
 spin-0 mediators might couple more strongly to down generation quarks.
- This assumption strongly motivates the study of final states involving $b$-quarks, 
+ This assumption motivates the study of final states involving $b$-quarks 
  as a complementary search to the $t\bar
-t$+DM models presented in the previous section.
+t$+DM models presented in the previous section, to directly probe the $b-$ quark coupling. 
+An example of such a model can be found in Ref.~\cite{Buckley:2014fba}
 
 As in the $t\bar t$ case, detailed studies were performed, analyzing 
 these models and their key features. It was found that they show the
@@ -23,7 +25,7 @@ In this particular model we recommend an additional care when choosing
 the flavor scheme generation. 
 It is found that the best modeling of two $b$-quarks final states is
 achieved using a 4-flavor scheme and a massive treatment of the
-$b$-quarks \textbf{[TODO: Add reference]}.
+$b$-quarks \Todo{Add reference}.
 % We recommend to use in the generation NNPDF3.0 set (lhaid
 %263400).
 In addition, we recommend to calculate the cross sections of these
@@ -31,7 +33,7 @@ models in the 5-flavour scheme, and as in the $t bar t$ case we provide
 values for the suggested coupling scan in the appendix. 
 The PDF used to calculate these cross section is NNPDF3.0 (lhaid 263000). 
 
-\textbf{[TODO: The following figures are placeholders for now and will be added later]}.
+\Todo{The following figures are placeholders for now and will be added once ready}.
 
 \begin{figure}
   \vbox{\hfill}
