--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -10,7 +10,7 @@ a primary role in the phenomenology.   The model predicts not only
 the monojet process described earlier, but also production of dark matter
 in association with top pairs, as illustrated in Fig.~\ref{fig:TTbarPhi}.
 
-\begin{figure}[t!]
+\begin{figure}[hbpt!]
 \centering
   \unitlength=0.005\textwidth
   \begin{feynmandiagram}[modelTTbarMET]
@@ -88,7 +88,7 @@ association with $t\bar t$.}
 
 \subsection{Parameter scan}
 
-As discussed in Sec.~\ref{sec:scalar}, the MFV and universal coupling assumptions for spin-$0$ mediators leads to quark mass dependent Yukawa couplings and therefore dominant couplings to top quarks.Therefore DM+$t\bar{t}$ searches are strongly physically motivated and it is important to establish benchmarks for collider searches following the assumptions described in Sec.~\ref{sec:scalar}, in particular a Dirac fermion DM particle, universal couplings and minimum width, $\Gamma_{\phi,a}$.
+As discussed in Sec.~\ref{sec:monojet_scalar}, the MFV and universal coupling assumptions for spin-$0$ mediators leads to quark mass dependent Yukawa couplings and therefore dominant couplings to top quarks.Therefore DM+$t\bar{t}$ searches are strongly physically motivated and it is important to establish benchmarks for collider searches following the assumptions described in Sec.~\ref{sec:monojet_scalar}, in particular a Dirac fermion DM particle, universal couplings and minimum width, $\Gamma_{\phi,a}$.
 
 %The benchmark chosen for these searches follows the assumptions mentioned in the previous Section: we consider 
 %a Dirac fermion DM particle, universal couplings to quarks, and minimum mediator width. 
@@ -105,8 +105,7 @@ benchmark points covering on-shell and off-shell production with sufficient gran
 
 \begin{figure}[!ht]
   \begin{center}
-    \includegraphics[scale=0.45]{figures/ttbar/MEt_chi1.pdf}
-    \vspace{2mm}
+    \includegraphics[width=0.7\textwidth]{figures/ttbar/MEt_chi1.pdf}
     \caption{\label{fig:scanPhi} Example of the dependence of the kinematics on the scalar mediator mass. The Dark Matter mass is fixed to be $1 {\rm GeV}$.}
 \end{center}
 \end{figure}
@@ -114,8 +113,7 @@ benchmark points covering on-shell and off-shell production with sufficient gran
 
 \begin{figure}[!ht]
   \begin{center}
-    \includegraphics[scale=0.45]{figures/ttbar/MEt_chi1_pseudo.pdf}
-    \vspace{2mm}
+    \includegraphics[width=0.7\textwidth]{figures/ttbar/MEt_chi1_pseudo.pdf}
     \caption{\label{fig:scanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass. The Dark Matter mass is fixed to be $1 {\rm GeV}$.
     }
 \end{center}
@@ -123,8 +121,7 @@ benchmark points covering on-shell and off-shell production with sufficient gran
 
 \begin{figure}[!ht]
   \begin{center}
-    \includegraphics[scale=0.45]{figures/ttbar/MEt_diagonal_scan.pdf}
-    \vspace{2mm}
+    \includegraphics[width=0.7\textwidth]{figures/ttbar/MEt_diagonal_scan.pdf}
     \caption{\label{fig:scanPhidiag} Example of the dependence of the kinematic for points of the grid proposed in Tab.~\ref{sec:monojet_scalar} close to the $m_{\phi,a} \sim 2m_\chi$ limit.3
     }
 \end{center}
@@ -134,14 +131,14 @@ Typically only weak dependencies on width or equivalently couplings are observed
 
 \begin{figure}[!ht]
   \begin{center}
-    \includegraphics[scale=0.45]{figures/ttbar/MEt_smallwidth.pdf}
-    \vspace{2mm}
+    \includegraphics[width=0.7\textwidth]{figures/ttbar/MEt_smallwidth.pdf}
     \caption{\label{fig:widthsmallscan} Study of the dependence of kinematics on the width of a scalar mediator. The width is increased up to four times the minimal width for each mediator and dark matter mass combination. 
     }
 \end{center}
 \end{figure}
 
-Another case where the width can impact the kinematics is when $m_{\phi,a}$ is slightly larger than $2m_\chi$. Here, the width determines the relative contribution between on-shell and off-shell production. An example is given in Fig.~\ref{fig:widthlargescan}. In our recommendations we propose to use for simplicity the minimal width, as this is represents the most conservative choice to interpret the LHC results. \textbf{[TODO: mention larger widths too]}
+Another case where the width can impact the kinematics is when $m_{\phi,a}$ is slightly larger than $2m_\chi$. Here, the width determines the relative contribution between on-shell and off-shell production. An example is given in Fig.~\ref{fig:widthlargescan}. 
+%In our recommendations we propose to use for simplicity the minimal width, as this is represents the most conservative choice to interpret the LHC results. 
 
 \begin{figure}[!ht]
   \begin{center}
@@ -167,7 +164,8 @@ to be harmonized with those for other analyses employing the same scalar model a
 Based on the sensitivity considerations above, DM masses are only simulated up to 500 GeV,
 leading to a total of 24 benchmark points.
 
-In addition to the considerations discussed in the preceding subsections, very light DM fermions are included ($\mdm=10\,{\rm GeV}$) as this is a region where colliders have a complementary sensitivity to current direct detection experiments. 
+%In addition to the considerations discussed in the preceding subsections, very light DM fermions are included ($\mdm=10\,{\rm GeV}$) 
+%as this is a region where colliders have a complementary sensitivity to current direct detection experiments. 
 % 
 % \begin{table}[!ht]
 % \centering
